# OOP

./: README.md
Executor/: CMakeLists.txt
Executor/include/: Executor.h
Executor/src/: Executor.cpp
LOGICAL/: CMakeLists.txt  Logical.cpp  Logical.h
Mebel/: CMakeLists.txt  Kanapa.cpp  Lozko.cpp  Mebel.cpp  Sofa.cpp
Mebel/include/: Kanapa.h  Lozko.h  Mebel.h  Sofa.h
Template1/: CMakeLists.txt  ftest.cpp
Template1/include/: num.h
Template1/src/: num.cpp
Urzadzenia/: CMakeLists.txt  Urzadzenia.cpp  Urzadzenia.h  mtest.cpp
Urzadzenia/include/: Drukarka.h  Ksero.h  Papierozerne.h  Rozdzielczosc.h  Skaner.h  Urzadzenia.h  Urzadzenie.h  Wielofunkcyjne.h
Urzadzenia/src/: Drukarka.cpp  Ksero.cpp  Rozdzielczosc.cpp  Skaner.cpp  Wielofunkcyjne.cpp
extest/: CMakeLists.txt
extest/include/: DoUndo.h
extest/src/: DoUndo.cpp
mobile/: CMakeLists.txt  Main.cpp
mobile/include/: Main.h  Motorower.h  Pojazd.h  Samochod.h
mobile/src/: Motorower.cpp  Pojazd.cpp  Samochod.cpp
